--- a/src/sketch/manifest.json
+++ b/src/sketch/manifest.json
@@ -8,6 +8,7 @@
   "appcast": "https://raw.githubusercontent.com/mfouquet/Reselect/main/appcast.xml",
   "compatibleVersion": 4.1,
   "bundleVersion": 1,
+  "disableCocoaScriptPreprocessor": true,
   "commands": [
     {
       "script": "selectionChanged.js",
@@ -23,7 +24,7 @@
       "handler": "restorePreviousSelection",
       "shortcut": "ctrl alt \\",
       "description": "Reselects your previous selection.",
-      "icon": "icons/reselect.png",
+      "icon": "images/reselect.png",
       "name": "Reselect Previous"
     },
     {
@@ -31,7 +32,7 @@
       "script": "saveCurrentSelection.js",
       "handler": "saveCurrentSelection",
       "description": "Save your current selection for access later.",
-      "icon": "icons/save.png",
+      "icon": "images/save.png",
       "name": "Save Current Selection"
     },
     {
@@ -40,7 +41,7 @@
       "handler": "loadSelection",
       "shortcut": "ctrl alt ]",
       "description": "Load a selection for the current document.",
-      "icon": "icons/load.png",
+      "icon": "images/load.png",
       "name": "Load Selection"
     },
     {
@@ -48,7 +49,7 @@
       "script": "deleteSelection.js",
       "handler": "deleteSelection",
       "description": "Delete a saved selection from the current document.",
-      "icon": "icons/delete.png",
+      "icon": "images/delete.png",
       "name": "Delete Selection"
     },
     {
@@ -56,7 +57,7 @@
       "script": "showSettings.js",
       "handler": "showSettings",
       "description": "Change your max selections stored and learn more about Reselect.",
-      "icon": "icons/settings.png",
+      "icon": "images/settings.png",
       "name": "Settings"
     }
   ],
