:construction: Get the selectionChanged working

--- a/Reselect.sketchplugin/Contents/Sketch/manifest.json
+++ b/Reselect.sketchplugin/Contents/Sketch/manifest.json
@@ -14,7 +14,7 @@
       "script": "selectionChanged.js",
       "handlers": {
         "actions": {
-          "SelectionChanged.finish": "onSelectionChanged"
+          "SelectionChanged.finish": "selectionChanged"
         }
       }
     },
